force-app/main/default/objects/Answer__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <formula>CASE( Question__r.Rating__c, &apos;Hot&apos;, &apos;Red&apos;, &apos;Cold&apos;, &apos;Green&apos;, &apos;Warm&apos;, &apos;Blue&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>