force-app/main/default/objects/Answer__c/fields/PopUp_Question__c.field-meta.xml
<CustomField>
    <fullName>PopUp_Question__c</fullName>
    <formula>IF( ISBLANK( Question__c ) , &apos;&apos;,  Question__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PopUp Question</label>
    <type>Text</type>
</CustomField>